# Blog

./: .gitignore  README.md  db.sqlite3  pyproject.toml
blog/: froms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_auto_20220310_0240.py  0004_post_header_image.py  0005_auto_20220313_0259.py
config/: settings.py  urls.py
templates/: add_comment.html  base.html  home.html  post_delete.html  post_detail.html  post_edit.html  post_new.html
