[tool.poetry]
name = "oneprojectpython"
version = "0.1.0"
description = ""
authors = ["SaniKyn <gajdukevich.sani@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "~=3.2"
django-taggit = "^2.1.0"
django-social-share = "^2.2.1"
django-heroku = "^0.3.1"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
